Add Android media input
- Add gallery and shared-media support for images and videos.
- Unify camera and media frame handling through chainable actions.
- Unify camera, video and image processing, drop camera CPU fallback.